<resources>
    <string name="app_name">Digital ink recognition</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="firstname">First name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login1">Login</string>
    <string name="logout">Logout</string>
    <string name="hello">hello</string>
</resources>